--- a/application-confirmation.html
+++ b/application-confirmation.html
@@ -48,7 +48,7 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center"
       >
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <a href="home.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/logo.svg" alt="CHIPR" />
           <!-- <h1 class="sitename">Chipr</h1> -->
@@ -56,11 +56,11 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="careers.html">Careers</a></li>
+            <li><a href="home.html">Careers</a></li>
             <li><a href="why-chipr.html">Why Chipr</a></li>
             <li><a href="success-stories.html">Success Stories</a></li>
             <li><a href="role-highlights.html">Role Highlights</a></li>
-            <li><a class="cta-btn" href="apply-now.html">Apply Now</a></li>
+            <li><a class="cta-btn" href="smart-scheduling.html">Apply Now</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -171,7 +171,7 @@
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
                   <li data-aos="fade-up" data-aos-delay="420">
-                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
+                    <a class="cta-btn cta-btn-w" href="smart-scheduling.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
@@ -222,7 +222,7 @@
             <div class="col-6" style="text-align: right">
               <a
                 class="cta-btn cta-btn-w"
-                href="apply-now.html"
+                href="smart-scheduling.html"
                 data-aos="fade-up"
                 data-aos-delay="270"
                 >Apply Now</a
@@ -305,7 +305,7 @@
 
       }
       else{
-        window.location.href = 'apply-now.html'
+        window.location.href = 'smart-scheduling.html'
       }
     </script>
   </body>
