--- a/referral.html
+++ b/referral.html
@@ -49,7 +49,7 @@
     <div
       class="container-fluid container-xl position-relative d-flex align-items-center"
     >
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="home.html" class="logo d-flex align-items-center me-auto">
         <img
           src="assets/img/logo.svg"
           alt="CHIPR"
@@ -61,7 +61,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li data-aos="fade-down" data-aos-delay="250">
-            <a href="careers.html">Careers</a>
+            <a href="home.html">Careers</a>
           </li>
           <li data-aos="fade-down" data-aos-delay="300">
             <a href="why-chipr.html">Why Chipr</a>
@@ -73,7 +73,7 @@
             <a href="role-highlights.html">Role Highlights</a>
           </li>
           <li data-aos="zoom-in" data-aos-delay="450">
-            <a class="cta-btn cta-btn-b" href="apply-now.html">Apply Now</a>
+            <a class="cta-btn cta-btn-b" href="smart-scheduling.html">Apply Now</a>
           </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -579,7 +579,7 @@
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
                   <li data-aos="fade-up" data-aos-delay="420">
-                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
+                    <a class="cta-btn cta-btn-w" href="smart-scheduling.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
@@ -630,7 +630,7 @@
             <div class="col-6" style="text-align: right">
               <a
                 class="cta-btn cta-btn-w"
-                href="apply-now.html"
+                href="smart-scheduling.html"
                 data-aos="fade-up"
                 data-aos-delay="270"
                 >Apply Now</a
@@ -732,7 +732,7 @@
         }
       );
       const urlParams = new URLSearchParams(window.location.search);
-      const code = urlParams.get('code'); 
+      const code = urlParams.get('eid'); 
       const preloader = document.getElementById('preloader');
 
   fetch(`https://core-services-api-e3a0bnafdsdbazb2.westus-01.azurewebsites.net/api/employee/${code}`, {
@@ -774,7 +774,7 @@
   })
   $('#closeModal').on('click', function() {
     localStorage.clear()
-    window.location.href = 'careers.html'
+    window.location.href = 'home.html'
   })
 
   function checkJoinOurTeam () {
