--- a/role-highlights.html
+++ b/role-highlights.html
@@ -49,7 +49,7 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center"
       >
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <a href="home.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/logo.svg" alt="CHIPR" />
           <!-- <h1 class="sitename">Chipr</h1> -->
@@ -58,19 +58,19 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li data-aos="fade-down" data-aos-delay="200">
-              <a  href="careers.html">Careers</a>
+              <a  href="home.html">Careers</a>
             </li>
             <li data-aos="fade-down" data-aos-delay="300">
               <a  href="why-chipr.html">Why Chipr</a>
             </li>
             <li data-aos="fade-down" data-aos-delay="300">
-              <a class="active"  href="success-stories.html">Success Stories</a>
+              <a href="success-stories.html">Success Stories</a>
             </li>
             <li data-aos="fade-down" data-aos-delay="400">
-              <a href="role-highlights.html">Role Highlights</a>
+              <a class="active"  href="role-highlights.html">Role Highlights</a>
             </li>
             <li data-aos="zoom-in" data-aos-delay="500">
-              <a class="cta-btn" href="apply-now.html">Apply Now</a>
+              <a class="cta-btn" href="smart-scheduling.html">Apply Now</a>
             </li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -258,7 +258,7 @@
               </h1>
               <p class="body-01" data-aos="fade-up"
               data-aos-delay="300"
-              data-aos-anchor-placement="top-bottom">Energy. Freedom. Success. Every Single Day.</p>
+              data-aos-anchor-placement="top-bottom">Energy. Freedom. Success. <br/>Every Single Day.</p>
             </div>
             <div class="col-lg-8">
               <div class="content ps-0 ps-lg-5">
@@ -278,7 +278,7 @@
         </div>
 
         <div class="side-btn" data-aos="flip-left" data-aos-delay="280">
-          <img src="assets/img/side-btn.png" height="127" />
+          <img href="smart-scheduling.html" src="assets/img/side-btn.png" height="127" />
         </div>
       </section>
       <!-- /Hero Section -->
@@ -306,7 +306,7 @@
             data-aos-anchor-placement="top-bottom">
               <div class="timeline-content">
                 <div>
-                  <img src="./assets/img/lunch.svg" />
+                  <img src="./assets/img/peak-performance.svg" />
                   <h3>
                     Peak Performance <br />
                     (10 AM–3 PM)
@@ -319,7 +319,7 @@
             data-aos-anchor-placement="top-bottom">
               <div class="timeline-content">
                 <div>
-                  <img src="./assets/img/lunch.svg" />
+                  <img src="./assets/img/celebration.svg" />
                   <h3>Victory Celebrations <br />(4 PM)</h3>
                   <p>Recap the day’s success, plan tomorrow’s hustle.</p>
                 </div>
@@ -339,7 +339,7 @@
               data-aos-anchor-placement="top-bottom">Everything You Need to Win</h2>
             </div>
             <div class="col-12 col-md-6">
-              <div class="d-flex align-items-center justify-content-between">
+              <div class="d-flex align-items-center justify-content-between gap-3">
                 <div>
                   <img
                     src="./assets/img/sales.svg"
@@ -364,7 +364,7 @@
                     data-aos-anchor-placement="top-bottom">Territory mapping</li>
                   </ul>
                 </div>
-                <div >
+                <div>
                   <div>
                     <img
                       src="./assets/img/team.svg"
@@ -476,14 +476,14 @@
                         >
                           <button
                             class="btn btn-actions btn-action-min"
-                            data-id="units"
+                            id="units-btn-min"
                           >
                             -
                           </button>
                           <div id="unitsValue" class="values">0</div>
                           <button
                             class="btn btn-actions btn-action-add"
-                            data-id="units"
+                            id="units-btn-add"
                           >
                             +
                           </button>
@@ -508,7 +508,7 @@
                         >
                           <button
                             class="btn btn-actions btn-action-min"
-                            data-id="recruits"
+                            id="recruits-btn-min"
                             disabled="true"
                           >
                             -
@@ -516,7 +516,7 @@
                           <div id="recruitsValue" class="values">0</div>
                           <button
                             class="btn btn-actions btn-action-add"
-                            data-id="recruits"
+                            id="recruits-btn-add"
                             disabled="true"
                           >
                             +
@@ -542,7 +542,7 @@
                         >
                           <button
                             class="btn btn-actions btn-action-min"
-                            data-id="avgSales"
+                           id="avgSales-btn-min"
                             disabled="true"
                           >
                             -
@@ -550,7 +550,7 @@
                           <div id="avgSalesValue" class="values">0</div>
                           <button
                             class="btn btn-actions btn-action-add"
-                            data-id="avgSales"
+                            id="avgSales-btn-add"
                             disabled="true"
                           >
                             +
@@ -637,7 +637,7 @@
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
                   <li data-aos="fade-up" data-aos-delay="420">
-                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
+                    <a class="cta-btn cta-btn-w" href="smart-scheduling.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
@@ -688,7 +688,7 @@
             <div class="col-6" style="text-align: right">
               <a
                 class="cta-btn cta-btn-w"
-                href="apply-now.html"
+                href="smart-scheduling.html"
                 data-aos="fade-up"
                 data-aos-delay="270"
                 >Apply Now</a
