--- a/success-stories.html
+++ b/success-stories.html
@@ -47,7 +47,7 @@
       <div
         class="container-fluid container-xl position-relative d-flex align-items-center"
       >
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <a href="home.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/logo.svg" alt="CHIPR" />
           <!-- <h1 class="sitename">Chipr</h1> -->
@@ -56,7 +56,7 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li data-aos="fade-down" data-aos-delay="200">
-              <a  href="careers.html">Careers</a>
+              <a  href="home.html">Careers</a>
             </li>
             <li data-aos="fade-down" data-aos-delay="300">
               <a  href="why-chipr.html">Why Chipr</a>
@@ -68,7 +68,7 @@
               <a href="role-highlights.html">Role Highlights</a>
             </li>
             <li data-aos="zoom-in" data-aos-delay="500">
-              <a class="cta-btn" href="apply-now.html">Apply Now</a>
+              <a class="cta-btn" href="smart-scheduling.html">Apply Now</a>
             </li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="side-btn" data-aos="flip-left" data-aos-delay="180">
-          <img src="assets/img/side-btn.png" height="127" />
+          <img href="smart-scheduling.html" src="assets/img/side-btn.png" height="127" />
         </div>
         
       </section>
@@ -355,7 +355,7 @@
         <div class="container custom-container">
           <div class="d-flex align-items-start justify-content-center performace-wrap">
             <div class="performace-item">
-              <div class="row align-items-center gy-5" data-aos="fade-up" data-aos-delay="100"  data-aos-anchor-placement="top-bottom">
+              <div class="row align-items-center" data-aos="fade-up" data-aos-delay="100"  data-aos-anchor-placement="top-bottom">
                 <div class="col-12 col-lg-5 col-md-5" >
                   <img src="./assets/img/money.svg"  width="64" class="img-fluid"/>
                 </div>
@@ -496,7 +496,7 @@
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
                   <li data-aos="fade-up" data-aos-delay="420">
-                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
+                    <a class="cta-btn cta-btn-w" href="smart-scheduling.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
@@ -547,7 +547,7 @@
             <div class="col-6" style="text-align: right">
               <a
                 class="cta-btn cta-btn-w"
-                href="apply-now.html"
+                href="smart-scheduling.html"
                 data-aos="fade-up"
                 data-aos-delay="270"
                 >Apply Now</a
