--- a/success-stories.html
+++ b/success-stories.html
@@ -297,7 +297,9 @@
             data-aos-anchor-placement="top-bottom">
            
                 <div class="front">
-                  <img src="./assets/img/sucess-story-1.png" class="img-fluid" />
+                  <div class="img-wrapper">
+                  <img src="./assets/img/sucess-story-1.png" class="absolute-item" />
+                  </div>
                   <div class="img-footer">
                     <h6>Jordan Martinez</h6>
                     <p>$85K in the first year, leads 15 reps.</p>
@@ -312,7 +314,9 @@
           data-aos-delay="600"
           data-aos-anchor-placement="top-bottom">
             <div class="front">
-              <img src="./assets/img/sucess-story-2.png" class="img-fluid" />
+              <div class="img-wrapper">
+              <img src="./assets/img/sucess-story-2.png" class="absolute-item" />
+              </div>
               <div class="img-footer">
                 <h6>Sarah Chen</h6>
                 <p>Promoted in 4 months—now oversees two markets.</p>
@@ -326,7 +330,10 @@
           data-aos-delay="700"
           data-aos-anchor-placement="top-bottom">
             <div class="front">
-              <img src="./assets/img/sucess-story-3.png" class="img-fluid" />
+              <div class="img-wrapper">
+                <img src="./assets/img/sucess-story-3.png" class="absolute-item" />
+              </div>
+            
               <div class="img-footer">
                 <h6>Marcus Thompson</h6>
                 <p>200+ sales, now trains new hires.</p>
@@ -336,12 +343,187 @@
               <p>Zero experience → soared in 8 months. Credits daily micro-goals, weekend Blitz events.</p>
             </div>
           </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+              <video  controls class="absolute-item">
+                <source
+                  src="assets/img/videos/Hayden_Testimonial.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              </div>
+              <div class="img-footer">
+                <h6>Hayden</h6>
+              </div>
+            </div>
+            <!-- <div class="back">
+              <p>In four short months, I’ve been able to make over $50,000 here at Chipr and that number is only going up. So come on in and this could be you too.</p>
+            </div> -->
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+                <img src="./assets/img/Allison.jpg" class="absolute-item" />
+              </div>
+              <div class="img-footer">
+                <h6>Allison</h6>
+              </div>
+            </div>
+            <div class="back">
+              <p>Working at Chipr is one of the greatest experiences! What sets us apart is our people, we genuinely love our people. Building genuine connections is something that we live every day. Everybody here embodies our Core S Factors, both in and out of work. You're surrounded by people who won't just support you, they'll challenge you to be your best self!.</p>
+            </div>
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+              <video  controls class="absolute-item">
+                <source
+                  src="assets/img/videos/Barbara_Testimonial.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              </div>
+              <div class="img-footer">
+                <h6>Barbara</h6>
+              </div>
+            </div>
+            <!-- <div class="back">
+              <p>There are opportunities to move up. There are opportunities to grow and expand. The female perspective is absolutely critical in the field. So don’t think it’s a guy’s field.</p>
+            </div> -->
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+                <img src="./assets/img/Tabatha.jpg" class="absolute-item" />
+              </div>
+              <div class="img-footer">
+                <h6>Tabatha</h6>
+              </div>
+            </div>
+            <div class="back">
+              <p>This is an organization with a foundation based on making the average person very successful in what they do.</p>
+            </div>
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+              <video  controls class="absolute-item">
+                <source
+                  src="assets/img/videos/Maci_Testimonial.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              </div>
+              <div class="img-footer">
+                <h6>Maci</h6>
+              </div>
+            </div>
+            <!-- <div class="back">
+              <p>I joined Chipr to avoid taking out student loans. Now, thanks to my earnings at Chipr, I’m able to attend cosmetology school, cover my tuition, and prepare for my future career.</p>
+            </div> -->
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+                <img src="./assets/img/Heather.png" class="absolute-item" />
+              </div>
+              <div class="img-footer">
+                <h6>Heather</h6>
+              </div>
+            </div>
+            <div class="back">
+              <p>Chipr is about genuine connections, believing in our products and maintaining transparency for integrity.</p>
+            </div>
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+              <video  controls class="absolute-item">
+                <source
+                  src="assets/img/videos/Brinsen_Testimonial.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              </div>
+              <div class="img-footer">
+                <h6>Brinsen</h6>
+              </div>
+            </div>
+            <!-- <div class="back">
+              <p>The biggest thing that I like to talk to people about is the environment that Chipr creates. It’s not just how different of a door to door space it is, you’re buying into something more.</p>
+            </div> -->
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+                <img src="./assets/img/Jeromee.png" class="absolute-item" />
+              </div>
+              <div class="img-footer">
+                <h6>Jeromee</h6>
+              </div>
+            </div>
+            <div class="back">
+              <p>In my previous employment, I was with a company where I traveled all the time…I wasn’t home and I missed out on a lot. I’m actually home now, and Chipr brought me into their family from day one.</p>
+            </div>
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+              <video  controls class="absolute-item">
+                <source
+                  src="assets/img/videos/Tyler_Testimonial.mp4"
+                  type="video/mp4"
+                />
+              </video>
+              </div>
+              <div class="img-footer">
+                <h6>Tyler</h6>
+              </div>
+            </div>
+            <!-- <div class="back">
+              <p>Just make a real connection with the person you’re speaking to. Have a conversation. What you’ll find is that customers are willing to connect, they love the product, and that this is really easy.</p>
+            </div> -->
+          </div>
+          <div class="item"  data-aos="fade-up"
+          data-aos-delay="700"
+          data-aos-anchor-placement="top-bottom">
+            <div class="front">
+              <div class="img-wrapper">
+                <img src="./assets/img/Terrance.jpeg" class="absolute-item" />
+              </div>
+              <div class="img-footer">
+                <h6>Terrance</h6>
+              </div>
+            </div>
+            <div class="back">
+              <p>This isn’t a company that just talks about having a great culture and talks about investing in and caring about their people and talks about being awesome human beings. This is a company that is actually living, walking, talking, breathing, eating, sleeping that.</p>
+            </div>
+          </div>
           </div>
           <div class="row mt-4">
             <div class="col-1">
               <div class="d-flex align-items-center justify-content-between gap-3">
-                <img src="./assets/img/prev-arrow.png" class="img-fluid" />
-                <img src="./assets/img/next-arrow.png" class="img-fluid" />
+                <img src="./assets/img/prev.svg" class="img-fluid" />
+                <img src="./assets/img/next.svg" class="img-fluid" />
               </div>
             </div>
           </div>
