--- a/index.html
+++ b/index.html
@@ -272,6 +272,11 @@
                               <strong><span id="recommendedBy">Johnson</span></strong> opened this door— let’s make it
                               happen.
                            </p>
+                           <div data-aos="fade-up"
+                              data-aos-delay="400"
+                              data-aos-anchor-placement="top-bottom">
+                              <a class="cta-btn cta-btn-b mt-3"   href="smart-scheduling.html">Join now </a>
+                           </div>
                         </div>
                      </div>
                      <div class="no-name-content">
@@ -321,7 +326,7 @@
                            >
                            <video autoplay muted loop playsinline>
                               <source
-                                 src="assets/img/videos/careers-hero.mp4"
+                                 src="assets/img/videos/career-hero-video.mp4"
                                  type="video/mp4"
                                  />
                            </video>
@@ -518,7 +523,7 @@
                         data-aos-delay="600"
                         data-aos-anchor-placement="top-bottom"
                         >
-                        <a class="cta-btn cta-btn-w"
+                        <a class="cta-btn cta-btn-w" href="why-chipr.html"
                            >See All Benefits </a>
                      </div>
                   </div>
@@ -591,7 +596,7 @@
                   <!-- End Client Item -->
                   <div class="col-xl-3 col-md-3 col-4 h-100">
                      <img
-                        src="assets/img/testimonal.png"
+                        src="assets/img/Terrance.png"
                         class="img-fluid"
                         width="245"
                         alt="testimonal"
