--- a/role-highlights.html
+++ b/role-highlights.html
@@ -571,7 +571,9 @@
                                  </div>
                               </div>
                               <div>
-                                 <button class="cta-btn">APPLY NOW →</button>
+                                 <div class="mt-3">
+                                 <a class="cta-btn" href="smart-scheduling.html">APPLY NOW </a>
+                              </div>
                                  <p class="small mt-3">
                                     <strong>Note:</strong>  Figures are based on past performance at the highest
                                     targets within each tier. Earnings are not guaranteed and
