--- a/role-highlights.html
+++ b/role-highlights.html
@@ -255,14 +255,19 @@
                   <div class="col-lg-8">
                      <div class="content ps-0 ps-lg-5">
                         <div class="position-relative">
-                           <img
-                              src="assets/img/role-hero.png"
-                              class="img-fluid"
-                              alt="role"
-                              data-aos="zoom-in"
-                              data-aos-delay="200"
-                              data-aos-duration="600"
-                              />
+                           <div
+                           class="video-wrap"
+                           data-aos="zoom-in"
+                           data-aos-delay="500"
+                           data-aos-duration="1200"
+                           >
+                           <video autoplay muted loop playsinline>
+                              <source
+                                 src="assets/img/videos/role-highlights-video.mp4"
+                                 type="video/mp4"
+                                 />
+                           </video>
+                        </div>
                         </div>
                      </div>
                   </div>
@@ -617,7 +622,7 @@
                   <div class="swiper-wrapper" data-aos="fade-up"  data-aos-delay="250"
                      data-aos-anchor-placement="top-bottom">
                      <div class="swiper-slide">
-                        <img src="./assets/img/quotes.svg" class="img-fluid" alt="quotes" />
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
                         <p>Chipr isn’t just about sales; it’s about building yourself. Within 6 months, I was leading a team and making more than ever before.”</p>
                         <p>-- <br/>
                            <span class="small-lead">Marcus, <br/>Regional Director</span> 
@@ -625,7 +630,7 @@
                      </div>
                      <!-- End testimonial item -->
                      <div class="swiper-slide">
-                        <img src="./assets/img/quotes.svg" class="img-fluid" alt="quotes" />
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
                         <p>Chipr isn’t just about sales; it’s about building yourself. Within 6 months, I was leading a team and making more than ever before.”</p>
                         <p>-- <br/>
                            <span class="small-lead">Marcus, <br/>Regional Director</span> 
