--- a/smart-scheduling.html
+++ b/smart-scheduling.html
@@ -256,8 +256,8 @@
                         <div class="position-relative">
                            <img
                               src="assets/img/apply-hero.png"
-                              class="img-fluid"
-                              alt=""
+                              class="img-fluid img-border"
+                              alt="Let's make it offical"
                               />
                         </div>
                      </div>
@@ -485,24 +485,24 @@
                       </p>
                       <ul>
                         <li data-aos="fade-up" data-aos-delay="200">
-                          Role Guide</li>
+                          <a class="text-white" href="role-highlights.html">  Role Guide</a></li>
                         <li data-aos="fade-up" data-aos-delay="300">
                          <a class="text-white" href="success-stories.html"> Success Stories </a>
                         </li>
-                        <li data-aos="fade-up" data-aos-delay="400">FAQ</li>
+                        <!-- <li data-aos="fade-up" data-aos-delay="400">FAQ</li> -->
                       </ul>
                     </div>
                     <div class="col-12 col-xl-6 col-lg-6 col-md-6">
-                      <div data-aos="fade-up" data-aos-delay="100">
+                      <div data-aos="fade-up" data-aos-delay="200">
                         <div class="p">Recruiter Contact:</div>
-                        <div class="p">info@chipr.com</div> 
-                        <div class="p">00000000000</div>
+                        <div class="p"><a href="mailto:recruiting@chipr.com">recruiting@chipr.com</a></div> 
+                        <div class="p"><a href="tel:(385) 401-0660">(385) 401-0660 </a></div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-6 social">
-                  <p data-aos="fade-up" data-aos-delay="100">
+                  <p data-aos="fade-up" data-aos-delay="200">
                     <strong>Join</strong>
                     <span class="text-accent"> #ChiprLife </span> on
                   </p>
