--- a/why-chipr.html
+++ b/why-chipr.html
@@ -613,7 +613,7 @@
                         </div>
                      </div>
                      <div class="col-12 mt-4" data-aos="fade-up" data-aos-delay="800" data-aos-anchor-placement="top-bottom">
-                        <a class="cta-btn" href="smart-scheduling.html">Join the League NOW <i class="bi bi-arrow-right-short"></i></a>
+                        <a class="cta-btn" href="smart-scheduling.html">Join the League NOW </a>
                      </div>
                   </div>
                </div>
@@ -646,7 +646,7 @@
                         <p class="mt-12">Top-tier perks: <strong>VIP trips, custom gear, leadership recognition</strong></p>
                      </div>
                      <div class="mt-5">
-                        <a class="cta-btn" href="smart-scheduling.html">Join the League NOW <i class="bi bi-arrow-right-short"></i></a>
+                        <a class="cta-btn" href="smart-scheduling.html">Join the League NOW </a>
                      </div>
                   </div>
                </div>
