--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-12 col-md-7">
+                  <div class="col-12 col-md-7 position-relative">
                      <div class="content">
                         <div
                            class="video-wrap"
@@ -339,6 +339,42 @@
                            faster than you ever imagined. Where hustle meets genuine
                            opportunity.
                         </p>
+                     </div>
+                     <div class="svg-container">
+                        <svg
+                           width="90"
+                           height="232"
+                           viewBox="0 0 90 232"
+                           fill="none"
+                           xmlns="http://www.w3.org/2000/svg"
+                           class="down-arrow-a"
+                           >
+                           <path
+                              d="M87.4998 185.163L45 227.842L2.50018 185.163C1.92722 184.587 0.999421 184.587 0.429719 185.163C-0.14324 185.738 -0.14324 186.67 0.429719 187.242L45 232L89.5703 187.242C90.1432 186.666 90.1432 185.735 89.5703 185.163C88.9973 184.587 88.0695 184.587 87.4998 185.163Z"
+                              fill="#EC5D25"
+                              class="svg-elem-5"
+                              ></path>
+                           <path
+                              d="M87.4998 138.979L45 181.658L2.50018 138.979C1.92722 138.404 0.999421 138.404 0.429719 138.979C-0.14324 139.554 -0.14324 140.486 0.429719 141.058L45 185.816L89.5703 141.058C90.1432 140.483 90.1432 139.551 89.5703 138.979C88.9973 138.404 88.0695 138.404 87.4998 138.979Z"
+                              fill="#EC5D25"
+                              class="svg-elem-4"
+                              ></path>
+                           <path
+                              d="M87.4998 92.7954L45 135.474L2.50018 92.7954C1.92722 92.2201 0.999421 92.2201 0.429719 92.7954C-0.14324 93.3708 -0.14324 94.3025 0.429719 94.8746L45 139.633L89.5703 94.8746C90.1432 94.2992 90.1432 93.3675 89.5703 92.7954C88.9973 92.2201 88.0695 92.2201 87.4998 92.7954Z"
+                              fill="#EC5D25"
+                              class="svg-elem-3"
+                              ></path>
+                           <path
+                              d="M87.4998 46.6151L45 89.2941L2.50018 46.6151C1.92722 46.0397 0.999421 46.0397 0.429719 46.6151C-0.14324 47.1905 -0.14324 48.1222 0.429719 48.6943L45 93.4525L89.5703 48.6943C90.1432 48.1189 90.1432 47.1872 89.5703 46.6151C88.9973 46.0397 88.0695 46.0397 87.4998 46.6151Z"
+                              fill="#EC5D25"
+                              class="svg-elem-2"
+                              ></path>
+                           <path
+                              d="M45 47.2689L89.5703 2.51072C90.1432 1.93535 90.1432 1.00364 89.5703 0.431531C88.9973 -0.143843 88.0695 -0.143843 87.4998 0.431531L45 43.1106L2.50018 0.431531C1.92722 -0.143843 1.00268 -0.143843 0.429719 0.431531C-0.14324 1.00364 -0.14324 1.93535 0.429719 2.51072L45 47.2689Z"
+                              fill="#EC5D25"
+                              class="svg-elem-1"
+                              ></path>
+                        </svg>
                      </div>
                   </div>
                </div>
@@ -594,7 +630,7 @@
                      </div>
                   </div>
                   <!-- End Client Item -->
-                  <div class="col-xl-3 col-md-3 col-4 h-100">
+                  <div class="col-xl-3 col-md-3 col-12 h-100">
                      <img
                         src="assets/img/Terrance.png"
                         class="img-fluid"
@@ -605,7 +641,7 @@
                         data-aos-duration="600"
                         />
                   </div>
-                  <div class="col-xl-4 col-md-4 col-8 h-100">
+                  <div class="col-xl-4 col-md-4 col-12 h-100">
                      <div>
                         <img
                            id="quotes"
