--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                            <div class="content-col1 h-100">
                               <p>Represent premium brands</p>
                               <img
-                                 src="./assets/img/brands.png"
+                                 src="./assets/img/brands-2.png"
                                  class="img-fluid"
                                  alt="brands"
                                  />
