--- a/smart-scheduling.html
+++ b/smart-scheduling.html
@@ -456,7 +456,7 @@
                         <li>Selected</li>
                      </ul>
                   </div>
-                  <div class="col-12 border-t pt-40" data-aos="fade-up" data-aos-delay="450">
+                  <div class="col-12 pt-40" data-aos="fade-up" data-aos-delay="450">
                      <button type="button" class="cta-btn cta-btn-b" id="schedule" disabled>
                         schedule interview </a>
                   </div>
